2002-04-14  Naba Kumar <kh_naba@users.sourceforge.net>

	* idl/symbol-browser.idl: Added a new method called
	setFile(), which is used to set the current file.
	
	* symbol-browser-control/tagmanager/include/tm_tag.h,
	  symbol-browser-control/tagmanager/tm_tag.c: 
	Removed static qualifier from tm_tag_type_name() and
	availed it's prototype for use in outside code. also
	created reverse map function tm_tag_type_name();
	
	* symbol-browser-control/test-symbol-browser.{c,h},
	  symbol-browser-control/symbol-browser.{c,h},
	  symbol-browser-control/symbol-browser-cobject.{c,h},
	  symbol-browser-control/Makefile.am:
	Added Per file Symbol browsing. with a new toolbar
	for symbol browser for listing per file symbol browsing.
	
	* symbol-browser-control/gnome-symbol-browser.xml:
	Added a new dockitem (toolbar) for file symbol browser.

2002-04-12  Naba Kumar <kh_naba@users.sourceforge.net>

	* symbol-browser-control/tagmanager/include/*.h,
	  symbol-browser-control/tagmanager/include/Makefile.am,
	  symbol-browser-control/tagmanager/*.[h,c],
	  symbol-browser-control/tagmanager/Makefile.am:
	  Upgraded tagmanager to 0.6 version. Added/removed many files.
	  
	* symbol-browser-control/pixmaps/*.xpm: Removed old icon files.
	* symbol-browser-control/pixmaps/sv_*.xpm: Added new icon files.
	
	* symbol-browser-control/test-symbol-browser.c,
	  symbol-browser-control/symbol-browser.{c,h},
	  symbol-browser-control/symbol-browser-cobject.{c,h}:
	  
	  Adjusted to the new tagmanager. Added more c types
	  (enums, typedef etc) and organized all of
	  them in sub folders to improve visibility and clarity.   
	  s/GtkObject/GObject/ as the derivative class for BonoboXObject
	  (clears compiler warnings). Cleaned ref/unref issues with
	  symbol-browser-control.
	
2002-04-10  Naba Kumar <kh_naba@users.sourceforge.net>

	* gdl/gdl-recent.c: Fixed a crash bug with tries to
	return the same list from which the only element has
	been removed (and hence freed).
